# mosaic

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Features-models graph.ipynb  LICENSE  README.md  Task3.ipynb  behavior-v2-guppies.ipynb  behavior-v3.ipynb  behavior.ipynb  dataset.py  ecodylic.yml  features.py  index.html  mkdocs.yml  mosaic_feature_update.md  mosaic_mvp_features.md  objects.inv  pyproject.toml  sitemap.xml
api/behavior/feature-library/: index.html
api/behavior/label-library/: index.html
api/behavior/visualization/: index.html
api/core/dataset/: index.html
api/core/helpers/: index.html
api/core/schema/: index.html
api/media/extraction/: index.html
api/media/video-io/: index.html
api/pipeline/: index.html
api/tracking/pose-training/: index.html
dev-prev/: Behavior Decomposition-social+ego-bak before py files.ipynb  Behavior Decomposition-social+ego.ipynb  Behavior Decomposition-social.ipynb  calms_dataset.py  models.py  util.py  viz.py
docs/: getting-started.md  guide-pipeline.md  index.md  migration-guide.md  pipeline.md
docs/api/behavior/: feature-library.md  label-library.md  visualization.md
docs/api/core/: dataset.md  helpers.md  schema.md
docs/api/media/: extraction.md  video-io.md
docs/api/pipeline/: index.md
docs/api/tracking/: frame-extraction.md  pose-training.md
docs/assessments/: 2026-03-17-task-11-pre-implementation.md
docs/issues/: 2026-03-11-loads-own-data-misuse.md  2026-03-12-streaming-feature-helper-issues.md  2026-03-16-model-predict-removal-and-xgboost-migration.md
docs/plans/: 2026-03-11-iteration-refactor.md  2026-03-12-drop-loads-own-data.md  2026-03-12-load-key-data-unification.md  2026-03-12-npz-to-parquet-design.md  2026-03-12-npz-to-parquet.md
docs/plans/pipeline/: task-05-replace-feature-protocol.md  task-06-migrate-stateless-features.md  (+6 more)
feature_library/: ffgroups_metrics.py
getting-started/: index.html
guide-pipeline/: index.html
migration-guide/: index.html
notebooks/: calms21-template.ipynb  mabe22-mouse-triplets.ipynb  migration-guide.md
pipeline/: index.html
reference/: training_queue_reference.py
scripts/: build_example_notebooks.py
search/: search_index.json
src/behavior/: __init__.py  analysis.py  dataset.py  features.py  helpers.py  models_behavior.py  visualization.py
src/behavior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mosaic/: __init__.py  runlog.py
tests/: conftest.py  runtime_monitor.py  test_arhmm.py  test_arhmm_numba_parity.py  test_bbox_rewrite.py  test_cli.py  test_deeplabcut_converter.py  test_extract_labeled_templates.py  test_extract_templates.py  test_feature_params.py  test_feral_feature.py  test_ffgroups.py  test_frame_aggregate.py  test_frame_extraction.py  test_global_kmeans.py  test_global_model_params.py  test_global_scaler.py  test_global_tsne.py  test_global_ward.py  test_imgstore_e2e.py  test_imgstore_io.py  test_index_csv.py  test_index_media_facts.py  test_index_media_imgstore.py  test_index_portability.py  test_inputs_subclass.py  test_iteration.py  test_job_contract.py  test_kpms_integration.py  test_load_spec.py  test_manifest.py  test_media_facts_injection.py  test_media_index.py  test_media_probe_facade.py  test_media_routing.py  test_pipeline.py  test_pipeline_clean.py  test_pipeline_writers.py  test_resolve_frame_range.py  test_run_feature.py  (+6 more)
(+209 files in other folders)
