[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-behavior"
version = "0.1.0"
description = "Mosaic — behavior analysis toolkit for animal tracking, feature extraction, and modeling."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ecodylic Science" }]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "pyarrow>=11.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "numba>=0.58",
    "seaborn>=0.12",
    "matplotlib>=3.7",
    "openTSNE>=0.6",
    "opencv-python>=4.7",
    "imbalanced-learn>=0.11",
    "xgboost>=1.7",
    "networkx>=3.2.1",
]

[project.optional-dependencies]
wavelets = ["PyWavelets>=1.4"]
pose = ["ultralytics>=8.0", "albumentations>=1.3"]
remote = [
    "requests>=2.31",
    "websocket-client>=1.8",
]
all = [
    "PyWavelets>=1.4",
    "requests>=2.31",
    "websocket-client>=1.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
