[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-behavior"
version = "0.1.0"
description = "Mosaic — behavior analysis toolkit for animal tracking, feature extraction, and modeling."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ecodylic Science" }]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "pydantic>=2.12",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "pyarrow>=11.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "numba>=0.58",
    "seaborn>=0.12",
    "matplotlib>=3.7",
    "openTSNE>=0.6",
    "opencv-python>=4.7",
    "imbalanced-learn>=0.11",
    "xgboost>=1.7",
    "networkx>=3.2.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "joblib-stubs>=1.4.2.5.20240918",
    "microsoft-python-type-stubs",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pandas-stubs>=2.2.2.240807",
    "pytest>=8.0",
    "ruff>=0.15.4",
    "scipy-stubs>=1.17.1.1",
]

[project.optional-dependencies]
wavelets = ["PyWavelets>=1.4"]
pose = ["ultralytics>=8.0", "albumentations>=1.3"]
polo = ["ultralytics @ git+https://github.com/mooch443/POLO.git", "albumentations>=1.3"]
lightning-action = ["lightning-action>=1.0"]
localizer = ["torch>=2.0", "h5py>=3.0"]
gpu = ["faiss-cpu>=1.7"]  # use faiss-gpu on Linux+CUDA for GPU-accelerated kNN in global-tsne
all = [
    "PyWavelets>=1.4",
]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
executionEnvironments = [
    { root = "src/mosaic/behavior/feature_library/external", extraPaths = ["src/mosaic/behavior/feature_library/external/.venv/lib/python3.13/site-packages"] },
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default, run with -m slow)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs" }

[tool.uv.workspace]
exclude = [
    "src/mosaic/behavior/feature_library/external",
]
